...
                          }
                          List<ProdutosRecord>
                              listviewNaoCompradosProdutosRecordList =
                              snapshot.data!;

                          return ListView.builder(
                            key: ValueKey('listviewNaoComprados_yfh7'),
                            padding: EdgeInsets.zero,
                            shrinkWrap: true,
                            scrollDirection: Axis.vertical,
                            itemCount:
                                listviewNaoCompradosProdutosRecordList.length,
                            itemBuilder: (context, listviewNaoCompradosIndex) {
...
