import 'package:flutter/gestures.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:integration_test/integration_test.dart';
import 'package:semcodar_tutorialff/flutter_flow/flutter_flow_icon_button.dart';
import 'package:semcodar_tutorialff/flutter_flow/flutter_flow_widgets.dart';
import 'package:semcodar_tutorialff/flutter_flow/flutter_flow_theme.dart';
import 'package:semcodar_tutorialff/index.dart';
import 'package:semcodar_tutorialff/main.dart';
import 'package:semcodar_tutorialff/flutter_flow/flutter_flow_util.dart';

import 'package:semcodar_tutorialff/backend/firebase/firebase_config.dart';
import 'package:semcodar_tutorialff/auth/firebase_auth/auth_util.dart';
import 'package:firebase_auth/firebase_auth.dart';

void main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  setUpAll(() async {
    await initFirebase();

    await FlutterFlowTheme.initialize();
  });

  setUp(() async {
    await authManager.signOut();
  });

  group('login_screen_integration_test', () {
    testWidgets('test if login with wrong credencials',
        (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(MyApp());

      await tester.pumpAndSettle(Duration(milliseconds: 3000));
      await tester.enterText(
          find.byKey(ValueKey('email_tl7p')), 'renan@hotmail.co');
      await tester.pumpAndSettle(Duration(milliseconds: 1000));
      await tester.enterText(find.byKey(ValueKey('senha_msvw')), '123456');
      await tester.pumpAndSettle(Duration(milliseconds: 1000));
      await tester.tap(find.byKey(ValueKey('Button_zpmc')));
      await tester.pumpAndSettle(Duration(milliseconds: 1000));
      expect(find.byKey(ValueKey('listviewNaoComprados_yfh7')), findsNothing);
    });
  });
}

// There are certain types of errors that can happen during tests but
// should not break the test.
void _overrideOnError() {
  final originalOnError = FlutterError.onError!;
  FlutterError.onError = (errorDetails) {
    if (_shouldIgnoreError(errorDetails.toString())) {
      return;
    }
    originalOnError(errorDetails);
  };
}

bool _shouldIgnoreError(String error) {
  // It can fail to decode some SVGs - this should not break the test.
  if (error.contains('ImageCodecException')) {
    return true;
  }
  // Overflows happen all over the place,
  // but they should not break tests.
  if (error.contains('overflowed by')) {
    return true;
  }
  // Sometimes some images fail to load, it generally does not break the test.
  if (error.contains('No host specified in URI') ||
      error.contains('EXCEPTION CAUGHT BY IMAGE RESOURCE SERVICE')) {
    return true;
  }
  // These errors should be avoided, but they should not break the test.
  if (error.contains('setState() called after dispose()')) {
    return true;
  }

  return false;
}
